--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -222,9 +222,11 @@ label:focus {
 }
 
 #tray {
-    border-radius: 10px;
+    border-radius: 0px 10px 10px 0px;
     background-color: #343434;
     border: 2px solid #829b6e;
+    border-left: 0px;
+    padding-left: 0px;
     margin-right: 15px;
 }
 
@@ -294,4 +296,12 @@ label:focus {
     margin-right: 15px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+#custom-powermenu {
+    padding-left: 10px;
+    border-radius: 10px 0px 0px 10px;
+    background-color: #343434;
+    border: 2px solid #829b6e;
+    border-right: 0px;
 }
