--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.0);
+    background-color: rgba(43, 48, 59, 0); /*change 4th val to 0 for transparent*/
     /*border-bottom: 0px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
     transition-property: background-color;
@@ -93,8 +93,8 @@ button:hover {
 #workspaces {
     border-radius: 10px;
     padding: 0px 10px;
-    background-color: #343434;
-    border: 2px solid #68c136;
+    background-color: #58427c;
+    /*border: 2px solid #68c136;*/
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -108,9 +108,9 @@ button:hover {
 }
 
 #clock {
-    background-color: #343434;
+    background-color: #58427c;
     border-radius: 10px;
-    border: 2px solid #418bc4;
+   /*border: 2px solid #418bc4;*/
 }
 
 @keyframes blink {
@@ -154,10 +154,10 @@ label:focus {
 }
 
 #pulseaudio {
-    background-color: #343434;
+    background-color: #9370db;
     border-radius: 10px 0px 0px 10px;
     color: #ffffff;
-    border: 2px solid #e67e80;
+    /*border: 2px solid #e67e80;*/
     border-right: 0px;
 }
 
@@ -165,7 +165,7 @@ label:focus {
     color: #ffffff;
     margin-right: 15px;
     border-radius: 0px 10px 10px 0px;
-    border: 2px solid #e67e80;
+    /*border: 2px solid #e67e80;*/
     border-left: 0px;
     padding-left: 0px;
 }
@@ -201,18 +201,18 @@ label:focus {
 #custom-updates {
     border-radius: 10px 0px 0px 10px;
     color: #ffffff;
-    background-color: #343434;
-    border: 2px solid #b29fdc;
-    border-right: 0px;
+    background-color: #9370db;
+    /*border: 2px solid #b29fdc;
+    border-right: 0px;*/
 }
 
 #temperature {
     border-radius: 0px 10px 10px 0px;
     color: #ffffff;
-    background-color: #343434;
-    border: 2px solid #b29fdc;
+    background-color: #9370db;
+    /*border: 2px solid #b29fdc;
     border-left: 0px;
-    padding-left: 0px;
+    padding-left: 0px;*/
 }
 
 #temperature.critical {
@@ -223,9 +223,9 @@ label:focus {
 
 #tray {
     border-radius: 0px 10px 10px 0px;
-    background-color: #343434;
-    border: 2px solid #829b6e;
-    border-left: 0px;
+    background-color: #6f00ff;
+    /*border: 2px solid #829b6e;
+    border-left: 0px;*/
     padding-left: 0px;
     margin-right: 15px;
 }
@@ -291,8 +291,8 @@ label:focus {
 
 #custom-playerctl {
     border-radius: 10px;
-    background-color: #343434;
-    border: 2px solid #dbbc7f;
+    background-color: #6f00ff;
+    /*border: 2px solid #dbbc7f;*/
     margin-right: 15px;
     padding-left: 10px;
     padding-right: 10px;
@@ -301,7 +301,7 @@ label:focus {
 #custom-powermenu {
     padding-left: 10px;
     border-radius: 10px 0px 0px 10px;
-    background-color: #343434;
-    border: 2px solid #829b6e;
-    border-right: 0px;
+    background-color: #6f00ff;
+   /* border: 2px solid #829b6e;
+    border-right: 0px;*/
 }
