--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -210,9 +210,9 @@ label:focus {
     border-radius: 0px 10px 10px 0px;
     color: #ffffff;
     background-color: #9370db;
-    /*border: 2px solid #b29fdc;
+    /*border: 2px solid #b29fdc;*/
     border-left: 0px;
-    padding-left: 0px;*/
+    padding-left: 0px;
 }
 
 #temperature.critical {
