--- a/.config/waybar/themes/peaceful_pond.css
+++ b/.config/waybar/themes/peaceful_pond.css
@@ -150,4 +150,14 @@ window#waybar {
     padding-right: 10px;
 }
 
-
+#custom-dotfiles {
+    box-shadow: 1 1 2 0.5px @shadow1 , @shadow2 0px -3px 0px inset;
+    border-radius: 12px;
+    color: @text;
+    background-color: @bg;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
