--- a/.config/waybar/themes/purple_abyss2.css
+++ b/.config/waybar/themes/purple_abyss2.css
@@ -1,5 +1,5 @@
-@define-color transparent rgba(235, 219, 178, 0); /* transparent waybar */
-@define-color bg rgba(10, 9, 16, 0); /* background color for the modules */ 
+@define-color transparent rgba(10,9,16,0); /* waybar bg */
+@define-color bg rgba(10,9,16,0); /* background color for the modules */ 
 @define-color text #910EAE; /* text/icon color */ 
 @define-color border #670e92;
 @define-color focused #670E92; /* color for focused workspace */
@@ -10,12 +10,12 @@
    /* font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;*/
     font-family: Hack Nerd Font;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 window#waybar {
     background-color: @transparent; 
-    border-radius: 5px;
+    border-radius: 30px;
 }
 
 #workspaces button.active {
@@ -37,7 +37,7 @@ window#waybar {
 #workspaces {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     background-color: @bg;
     color: @text;
     margin-top: 5px;
@@ -50,21 +50,21 @@ window#waybar {
 #clock {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     color: @text;
     background-color: @bg;
     margin-top: 5px;
     margin-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-right: 15px;
+    margin-right: 5px;
 }
 
 
 #memory {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     background-color: @bg;
     color: @text;
     margin-top: 5px;
@@ -77,7 +77,7 @@ window#waybar {
 #network {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     background-color: @bg;
     color: @text;
     margin-top: 5px;
@@ -90,7 +90,7 @@ window#waybar {
 #pulseaudio {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     background-color: @bg;
     color: @text;
     margin-top: 5px;
@@ -108,7 +108,7 @@ window#waybar {
 #custom-updates {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     color: @text;
     padding-left: 10px;
     padding-right: 5px;
@@ -121,12 +121,13 @@ window#waybar {
 #custom-powermenu {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     color: @text;
     background-color: @bg;
     margin-top: 5px;
     margin-bottom: 5px;
     margin-right: 15px;
+    margin-left: 5px;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -134,7 +135,7 @@ window#waybar {
 #custom-dotfiles {
     border: 2px solid;
     border-color: @border;
-    border-radius: 12px;
+    border-radius: 30px;
     color: @text;
     background-color: @bg;
     margin-top: 5px;
