--- a/.config/waybar/themes/pain.css
+++ b/.config/waybar/themes/pain.css
@@ -4,10 +4,13 @@
 @define-color pain-blue #33509F;
 @define-color pain-green #5D9B7F;
 @define-color pain-pink #BF3A9A;
+@define-color pain-bright-pink #FCB4F6;
 @define-color pain-indigo #6e5d8e;
 @define-color pain-purple #916097;
 @define-color pain-yellow #F3D9A1;
 @define-color pain-orange #8A3F32;
+@define-color pain-bright-orange #BA463D;
+@define-color pain-white #c4c3c6;
 @define-color button #9d9ca1; /* color for workspace buttons */
 
 * {
@@ -40,7 +43,7 @@ window#waybar {
 }
 
 #workspaces {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-indigo;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -54,7 +57,7 @@ window#waybar {
 }
 
 #clock {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-orange;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -67,9 +70,21 @@ window#waybar {
     margin-right: 15px;
 }
 
+#temperature {
+    border: 3px solid;
+    border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
+        @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
+    background-color: @bg;
+    color: @pain-bright-orange;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
 #memory {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-pink;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -83,7 +98,7 @@ window#waybar {
 }
 
 #network {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-green;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -97,7 +112,7 @@ window#waybar {
 }
 
 #pulseaudio {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-yellow;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -116,7 +131,7 @@ window#waybar {
 }
 
 #custom-updates {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-purple;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -130,7 +145,7 @@ window#waybar {
 }
 
 #custom-powermenu {
-    border: 2px solid;
+    border: 3px solid;
     /*border-color: @pain-red;*/
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
@@ -144,12 +159,25 @@ window#waybar {
 }
 
 #custom-dotfiles {
-    /* border: 2px solid;*/
+    /* border: 3px solid;*/
     /*border-color: @pain-blue;*/ 
-    border: 2px solid;
+    border: 3px solid;
     border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
         @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
     color: @pain-blue;
+    background-color: @bg;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#custom-theme {
+    border: 3px solid;
+    border-image: linear-gradient(20deg, @pain-red, @pain-blue, @pain-green, @pain-pink, 
+        @pain-indigo, @pain-purple, @pain-yellow, @pain-orange) 1;
+    color: @pain-bright-pink;
     background-color: @bg;
     margin-top: 5px;
     margin-bottom: 5px;
