--- a/.config/waybar/themes/purple_abyss2.css
+++ b/.config/waybar/themes/purple_abyss2.css
@@ -60,6 +60,18 @@ window#waybar {
     margin-right: 5px;
 }
 
+#temperature {
+     border: 2px solid;
+    border-color: @border;
+    border-radius: 30px;
+    background-color: @bg;
+    color: @text;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}   
 
 #memory {
     border: 2px solid;
@@ -138,6 +150,19 @@ window#waybar {
     border-radius: 30px;
     color: @text;
     background-color: @bg;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#custom-theme {
+    border: 2px solid;
+    border-color: @border;
+    border-radius: 30px;
+    background-color: @bg;
+    color: @text;
     margin-top: 5px;
     margin-bottom: 5px;
     margin-right: 15px;
